--- a/index/index.html
+++ b/index/index.html
@@ -4,13 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="x5-orientation" content="portrait">
-	<meta name="x5-fullscreen" content="true">
-	<meta name="screen-orientation" content="portrait" />
-	<meta name="full-screen" content="yes">
 	<meta name="format-detection" content="telephone=no,email=no">
 	<title>Softlink</title>
+	<script>
+
+	</script>
 	<script>
 		(function (deviceWidth, fontSize) {
 			deviceWidth = deviceWidth || 640;
@@ -88,5 +86,6 @@
 		</dl>
 	</footer>
 </body>
+</script>
 
 </html>
