--- a/index/prespPlay.html
+++ b/index/prespPlay.html
@@ -48,7 +48,7 @@
         <div class="content">
             <!-- 视屏 -->
             <div class="videoWarp">
-                <video src=""></video>
+                <video  src=""  controls="" x5-playsinline="" playsinline="" webkit-playsinline="" poster="" preload="auto"></video>
                 <div class="play"></div>
             </div>
             <!-- 讲师 -->
