--- a/index/live.html
+++ b/index/live.html
@@ -49,9 +49,9 @@
             <!-- 视屏 -->
             <div class="videoWarp">
                 <div class="videoBox">
-                    <video id="liveVideo" x5-video-player-type="h5" x5-video-player-fullscreen='true' webkit-playsinline='true' playsinline='true' x-webkit-airplay="true" airplay="allow"  x5-video-orientation="portrait" x-webkit-airplay="allow" src=''></video>
+                    <video id="liveVideo" preload='auto' x5-video-player-type="h5" x5-video-player-fullscreen='true' webkit-playsinline='true' playsinline='true' x-webkit-airplay="true" airplay="allow"  x5-video-orientation="portrait" x-webkit-airplay="allow" src=''></video>
                 </div>
-                <div class="prompt">距离开课还有<span>24</span>分钟</div>
+                <div class="prompt">距离开课还有<span class='m'>00</span>分<span class='s'>00</span>秒</div>
                 <canvas id="liveCanvas"></canvas>
                 <div class="play"></div>
                 <div class="full"></div>
@@ -62,14 +62,6 @@
                     本期讲师
                 </div>
                 <div class="teacher clear">
-                    <div class="tx">
-                        <img src="../img/tu.jpg" alt="">
-                    </div>
-                    <div class="name">
-                        <h4>Monica</h4>
-                        <span>GRE满分选手</span>
-                    </div>
-                    <div class="guanzhu">+关注</div>
                 </div>
             </div>
             <!-- 导航 -->
